atftp (0.7.xx)
  * Fix missing default port from Ubuntu bug #972834 
  * Merged patches to improve debugging and warning messages
    (from Florian Fainelli <f.fainelli@gmail.com>)
  * Merged patch from Gentoo distribution: 
    add support for proprietary password extension necessary for transferring
    files to linksys routers (atftp client)
  * Added patch from Gentoo bug #322601: client fails for filenames containing
    spaces
  * Listening Address configuration fixed
  * Added Patch "Blksize option can be smaller than SEGSIZE" 
    (from Michał Rzechonek <m.rzechonek@kelvatek.com>)
  * Merged Debian patchset 0.7.dfsg-9.3 into main
    see debian changelog below for details
  * Initial Developer + Maintainer  "Jean-Pierre Lefebvre" <helix@step.polymtl.ca>
    gave up maintenance, thanks for all the work!!!
  * New Project home: http://sourceforge.net/projects/atftp/
  




========================================================
debian changelog inserted here for completeness
========================================================

atftp (0.7.dfsg-9.3) unstable; urgency=low

  * Non-maintainer upload.
  * Apply patch listen on requested port when in daemon mode.  
    Thanks to Len Sorensen.  (Closes: #609813)

 -- tony mancill <tmancill@debian.org>  Wed, 12 Jan 2011 20:58:05 -0800

atftp (0.7.dfsg-9.2) unstable; urgency=low

  * Non-maintainer upload.
  * Fixed use of sendto() over a connected datagram socket on FreeBSD
    (closes: #598474).

 -- Giovanni Mascellani <gio@debian.org>  Mon, 04 Oct 2010 16:46:32 +0200

atftp (0.7.dfsg-9.1) unstable; urgency=low

  * Non-maintainer upload.
  * Apply IPv6 support patch by Ben Hutchings. Closes: #580473
  * Add AC_GNU_SOURCE to configure.ac to address FTBFS.
    - Patches applied directly to sources to minimize changes for NMU,
      as the current Debian packaging does not include a patch system.

 -- tony mancill <tmancill@debian.org>  Wed, 15 Sep 2010 21:24:52 -0700
